--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maxium-scale=1.0, user-scalable=yes">
   <meta content="description" name="description">
   <meta name="google" content="notranslate">
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
