--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 -->
 <script type="text/javascript" src="./main.41beeca9.js"></script>
-<script type="text/javascript" src="utility.js"></script>
+<!-- <script type="text/javascript" src="utility.js"></script> -->
 </body>
 
 </html>
