--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta content="description" name="description">
   <meta name="google" content="notranslate">
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
-  <meta property="og:image" content= "url('./assets/images/hero3.jpg'"/>
+  <meta property="og:image" content= url(./assets/images/hero3.jpg)/>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
