--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="image"
-      content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3-min.jpg"
+      content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3.jpg"
     />
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Sage Change - Elizabeth Muniot" />
@@ -27,7 +27,7 @@
     />
     <meta
       itemprop="image"
-      content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3-min.jpg"
+      content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3.jpg"
     />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Sage Change - Elizabeth Muniot" />
