--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <div
       class="white-text-container background-image-container"
-      style="background-image: url('./assets/images/hero3-min.jpg')"
+      style="background-image: url('./assets/images/hero3.jpg')"
     >
       <div class="opacity">
         <div class="container">
